Добавлены форма и список для идей в HTML

--- a/public/index.html
+++ b/public/index.html
@@ -8,12 +8,12 @@
 </head>
 <body>
     <div class="container">
-        <h1>ArtFlow Assistant</h1>
+        <h1>🎨 ArtFlow Assistant</h1>
         <p class="subtitle">Цифровая мастерская для художников</p>
         <div class="content">
             <p>Начало проекта. Версия 0.1</p>
             <button id="testBtn" class="btn">Проверить JS</button>
-            <p id="message" class="hidden">JS работает!</p>
+            <p id="message" class="hidden">✅ JavaScript работает!</p>
         </div>
     </div>
     <script src="js/app.js"></script>
