--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
         <!-- ЦВЕТОВАЯ ЛАБОРАТОРИЯ -->
 <section id="color-lab" class="content-section hidden">
     <h2>🎨 Цветовая лаборатория</h2>
-    
+
     <div class="color-picker">
         <input type="color" id="colorInput" value="#6a11cb">
         <input type="text" id="colorHex" value="#6a11cb" maxlength="7">
@@ -41,7 +41,7 @@
         <div id="selectedColor" style="background: #6a11cb;"></div>
         <p>Выбранный цвет: <span id="colorValue">#6a11cb</span></p>
     </div>
-    
+
     <div class="palette-section">
         <h3>Моя палитра</h3>
         <div id="colorPalette" class="palette">
@@ -58,5 +58,6 @@
         </div>
     </div>
     <script src="js/app.js"></script>
+    <script src="js/colors.js"></script>
 </body>
 </html>
