--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
             </div>
          </div>   
         <!-- 2. ЦВЕТОВАЯ ЛАБОРАТОРИЯ -->
-        <section id="color-lab" class="content-section hidden">
+        <section id="color-lab" class="content-section">
             <h2>🎨 Цветовая лаборатория</h2>
 
             <div class="color-picker">
