Трекер проектов: добавила базовую HTML структуру

--- a/public/index.html
+++ b/public/index.html
@@ -61,7 +61,18 @@
         <!-- 3. ТРЕКЕР ПРОЕКТОВ  -->
         <section id="projects-section" class="content-section">
             <h2>📋 Трекер проектов</h2>
-            <p>Скоро здесь будет трекер творческих проектов...</p>
+        <div class="project-form">
+            <input type="text" id="projectInput" 
+                placeholder="Название проекта..."
+                class="project-input">
+            <button id="addProjectBtn" class="btn">Добавить</button>
+        </div>
+        <div class="kanban-board">
+            <div class="kanban-column">
+                <h3>📝 Планирую</h3>
+                <div id="column-planning" class="column-content"></div>
+            </div>
+        </div>
         </section>
         <!-- ТЕСТОВАЯ СЕКЦИЯ -->
          <div class="content">
