Трекер проектов: подключила projects.js

--- a/public/index.html
+++ b/public/index.html
@@ -84,5 +84,6 @@
     <!-- ПОДКЛЮЧЕНИЕ JS -->
     <script src="js/app.js"></script>
     <script src="js/colors.js"></script>
+    <script src="js/projects.js"></script>
 </body>
 </html>
